--- a/app/settings/Settings.module.scss
+++ b/app/settings/Settings.module.scss
@@ -11,7 +11,6 @@
     &Link {
         font-size: 1.2rem;
         composes: link from 'styles/scaffold.scss';
-        flex: 0 0 80%;
     }
 
     &Buttons {
