--- a/shared/ui/PieChart/PieChart.module.scss
+++ b/shared/ui/PieChart/PieChart.module.scss
@@ -7,6 +7,7 @@
         position: relative;
         width: var(--pieChartSize);
         height: var(--pieChartSize);
+        overflow: hidden;
 
         &::after {
             content: '';
